<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_calendar">Календарь</string>
    <string name="menu_results">Результаты</string>
    <string name="menu_calculate">Калькулятор очков FINA</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_ranks">Разряды и рекорды</string>
    <string name="result_distance">Введите дистанцию</string>
    <string name="result_detail_title">Результат</string>
    <string name="save">Сохранить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>